# soup

./: .env.example  .gitignore  CLAUDE.md  CONSTITUTION.md  MEMORY.md  README.md  justfile  library.yaml  pyproject.toml
.claude/: scratchpad.md  settings.json  settings.local.json
.claude/agents/: REGISTRY.md  ado-agent.md  architect.md  code-reviewer.md  deployer.md  docs-ingester.md  dotnet-dev.md  full-stack-integrator.md  github-agent.md  implementer.md  incident-responder.md  meta-prompter.md  orchestrator.md  over-eng-critic.md  plan-writer.md  python-dev.md  qa-orchestrator.md  rag-researcher.md  react-dev.md  red-team-critic.md  security-scanner.md  spec-writer.md  sql-specialist.md  tasks-writer.md  test-engineer.md  ts-dev.md  verifier.md
.claude/commands/: clarify.md  constitution.md  deploy.md  implement.md  ingest-plans.md  install.md  intake.md  map-codebase.md  plan.md  quick.md  rag-ingest.md  rag-search.md  review.md  soup-init.md  specify.md  tasks.md  verify.md
.claude/hooks/: post_tool_use.py  pre_tool_use.py  session_start.py  stop.py  subagent_start.py  user_prompt_submit.py
.claude/settings.presets/: development.json  restricted.json
.githooks/: pre-commit
.github/workflows/: ci.yml
cli_wrappers/: __init__.py  ado.py  docker.py  dotnet.py  gh.py  git.py  node_pkg.py  psql.py
docker/: Dockerfile.dev  README.md  docker-compose.yml  postgres-init.sql
docs/: ARCHITECTURE.md  DESIGN.md  ONBOARDING.md  PATTERNS.md  USER_GUIDE.md  USER_GUIDE_RAG.md
docs/incidents/: README.md  TEMPLATE.md
docs/real-world-dogfood/: claude-news-aggregator.md  iter2-brownfield-integration.md  (+7 more)
intake/: README.md
migrations/: 0000_schema_migrations.down.sql  0000_schema_migrations.up.sql
mock-apps/: README.md
orchestrator/: __init__.py  agent_factory.py  cli.py  meta_prompter.py  orchestrator.py  providers.py  state.py  waves.py
rag/: README.md  __init__.py  client.py  health.py  ingest.py  mcp_server.py  search.py
research/: 01-adiemas.md  02-disler.md  03-archon.md  04-superpowers.md  05-autoresearch.md  06-hkuds.md  07-gsd.md  08-sdd-testing.md  09-streck-existing.md
schemas/: __init__.py  agent_log.py  execution_plan.py  intake_form.py  qa_report.py  spec.py  task.py
scripts/: __init__.py  hydrate_context_excerpts.py  split_experiments_tsv.py
specs/: prompt-library-2026-04-14.md
templates/fullstack-python-react/backend/: Dockerfile  pyproject.toml
templates/fullstack-python-react/backend/app/: __init__.py  main.py
templates/fullstack-python-react/backend/migrations/: 0001_init.up.sql
templates/fullstack-python-react/backend/tests/: test_api.py
templates/python-fastapi-postgres/: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
templates/python-fastapi-postgres/app/: __init__.py  db.py  main.py  models.py
templates/python-fastapi-postgres/migrations/: 0001_init.down.sql  0001_init.up.sql
templates/python-fastapi-postgres/tests/: test_health.py
tests/: __init__.py  test_agent_factory.py  test_cli.py  test_cli_wrappers.py  test_hydrate.py  test_intake_form.py  test_meta_prompter.py  test_orchestrator.py  test_rag.py  test_schemas.py  test_waves.py
(+213 files in other folders)
